tests/ui/coroutine/invalid_attr_usage.stderr
error: `#[coroutine]` attribute cannot be used on structs
  --> $DIR/invalid_attr_usage.rs:5:1
   |
LL | #[coroutine]
   | ^^^^^^^^^^^^
   |
   = help: `#[coroutine]` can only be applied to closures

error: `#[coroutine]` attribute cannot be used on functions
  --> $DIR/invalid_attr_usage.rs:9:1
   |
LL | #[coroutine]
   | ^^^^^^^^^^^^
   |
   = help: `#[coroutine]` can only be applied to closures

error: aborting due to 2 previous errors

